fixed the viewport overflow

--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,32 @@
         --font-size: 16px;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* remove any source of overflowing */
+}
+
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Young Serif", serif;
+}
+
+p {
+    font-family: "Outfit", sans-serif;
+}
+
 .container {
     padding-left: 0px;
+    padding-right: 0px;
 }
 
 .recipe-img img {
+    display: block;
     max-width: 100vw;
-    padding-left: 0px;
-    padding-right: 0px;
+    width: 100%;
+}
+
+.recipe-title {
+    padding: 20px;
 }
